--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,11 @@ body {
   text-align: center;
   font-family: "Inconsolata", monospace;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: weight;
   font-style: normal;
-  font-variation-settings: ss "wdth" 100;
+  font-variation-settings: wdth 100;
 }
+
 h1 {
   font-size: 40sspx;
 }
@@ -52,7 +53,7 @@ form {
   line-height: 20px;
 }
 
-.poem {
+.quote {
   font-size: 16px;
   background-color: white;
   padding: 20px;
@@ -64,7 +65,7 @@ form {
   display: none;
 }
 
-.poem strong {
+.quote strong {
   color: #7fb3d5;
 }
 
